--- a/index.html
+++ b/index.html
@@ -16,13 +16,23 @@
 <body>
     <header class="main-header">
         <a href="#hero" class="logo">MeuSite</a>
-        <nav class="main-nav">
+    <div id="menu">
+        <div id="menu-bar"onclick="menuToggle()">
+            <div id="bar1" class="bar"></div>
+            <div id="bar2" class="bar"></div>
+            <div id="bar3" class="bar"></div>
+            
+        </div>
+
+    </div>
+        <nav class="main-nav" id ="nav">
         <ul>
         <li><a href="#gallery">Galeria</a></li>
         <li><a href="#testimonials">Depoimentos</a></li>
         <li><a href="#contact">Contato</a></li>
         </ul>
         </nav>
+        <div class="menu-bg" id="menu-bg"></div>
         </header>
         
         <main>
